// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModelsAdd /> should render properly 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  color: #ffffff;
  background-color: #d6680b;
  border-radius: 32px;
  font-size: 11px;
  line-height: 15px;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 0.2px;
  padding: 1px;
  padding-left: 6px;
  padding-right: 6px;
  margin-left: 8px;
}

<h2
    className="emotion-0"
  >
    Custom Models
    <span
      className="emotion-1"
    >
      beta
    </span>
  </h2>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3A5DFF;
}

.emotion-5 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/models"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/models/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create New Model
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-1 {
  font-size: 21px;
  line-height: 30px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-2 {
  padding-top: 8px;
}

.emotion-3 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-4 {
  position: relative;
}

.emotion-5 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-5:focus,
.emotion-5 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-5:hover,
.emotion-5 .noop {
  border: 2px solid #ffffff;
}

.emotion-6 {
  padding-top: 8px;
}

.emotion-7 {
  padding-top: 8px;
}

.emotion-8 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-10 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-10:focus,
.emotion-10 .noop {
  border: 2px solid #3A5DFF;
  background-color: #ffffff;
  outline: #3A5DFF;
  color: #000000;
}

.emotion-13 {
  padding-top: 16px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-16 {
  padding: 0;
  -webkit-appearance: none;
  border-radius: 16px;
  width: 16px;
  height: 16px;
  border: 1px solid #808080;
}

.emotion-17 {
  position: absolute;
  width: 8px;
  height: 8px;
  opacity: 100;
  border-radius: 16px;
  background-color: none;
}

.emotion-18 {
  padding-left: 12px;
}

.emotion-19 {
  font-weight: 700;
  color: #ffffff;
}

.emotion-20 {
  color: #b3b3b3;
}

.emotion-37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-37 button,
.emotion-37 a {
  margin-right: 16px;
}

.emotion-37 button:last-child,
.emotion-37 a:last-child {
  margin-right: 0;
}

.emotion-38 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-38,
.emotion-38:hover,
.emotion-38:visited,
.emotion-38 .noop {
  background-color: #3A5DFF;
}

.emotion-38:hover,
.emotion-38 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-38[aria-disabled=true],
.emotion-38 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
    action=""
    className="emotion-0"
    method="post"
    onSubmit={[Function]}
  >
    <h3
      className="emotion-1"
    >
      Model Name & Description
    </h3>
    <div
      className="emotion-2"
    >
      <label
        className="emotion-3"
        htmlFor="name"
      >
        Model Name (no spaces - lowercase, numbers, and dashes only):
      </label>
      <div
        className="emotion-4"
      >
        <input
          autoComplete="off"
          autoFocus={true}
          className="emotion-5"
          disabled={false}
          id="name"
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="emotion-6"
      >
         
      </div>
    </div>
    <div
      className="emotion-7"
    >
      <label
        className="emotion-8"
        htmlFor="description"
      >
        Description (optional):
      </label>
      <div
        className="emotion-9"
      >
        <textarea
          className="emotion-10"
          id="description"
          name="description"
          onChange={[Function]}
          rows="5"
          value=""
        />
      </div>
      <div
        className="emotion-7"
      >
         
      </div>
    </div>
    <h3
      className="emotion-1"
    >
      Select Model Type
    </h3>
    <div
      className="emotion-13"
    >
      <div>
        <label
          className="emotion-14"
        >
          <div
            className="emotion-15"
          >
            <input
              className="emotion-16"
              defaultChecked={false}
              name="modelType"
              onClick={[Function]}
              type="radio"
              value="KNN_CLASSIFIER"
            />
            <div
              className="emotion-17"
            />
          </div>
          <div
            className="emotion-18"
          >
            <div
              className="emotion-19"
            >
              K-Nearest Neighbors Classifier
            </div>
            <div
              className="emotion-20"
            >
              Classify images, documents and video clips using a KNN classifier.  This type of model can work great with just a single labeled example.If no labels are provided, the model automatically generates numbered groups of similar assets. These groups can be renamed and edited in subsequent training passes.
            </div>
          </div>
        </label>
      </div>
    </div>
    <div
      className="emotion-13"
    >
      <div>
        <label
          className="emotion-14"
        >
          <div
            className="emotion-15"
          >
            <input
              className="emotion-16"
              defaultChecked={false}
              name="modelType"
              onClick={[Function]}
              type="radio"
              value="TF_CLASSIFIER"
            />
            <div
              className="emotion-17"
            />
          </div>
          <div
            className="emotion-18"
          >
            <div
              className="emotion-19"
            >
              Tensorflow Transfer Learning Classifier
            </div>
            <div
              className="emotion-20"
            >
              Classify images or documents using a custom strained CNN deep learning algorithm.  This type of modelgenerates multiple predictions and can be trained to identify very specific features. The label detection classifier requires at least 2 concepts with 10 labeled images each.
            </div>
          </div>
        </label>
      </div>
    </div>
    <div
      className="emotion-13"
    >
      <div>
        <label
          className="emotion-14"
        >
          <div
            className="emotion-15"
          >
            <input
              className="emotion-16"
              defaultChecked={false}
              name="modelType"
              onClick={[Function]}
              type="radio"
              value="FACE_RECOGNITION"
            />
            <div
              className="emotion-17"
            />
          </div>
          <div
            className="emotion-18"
          >
            <div
              className="emotion-19"
            >
              Face Recognition
            </div>
            <div
              className="emotion-20"
            >
              Label faces detected by the boonai-face-detection module, and classify them with a KNN model.
            </div>
          </div>
        </label>
      </div>
    </div>
    <div
      className="emotion-37"
    >
      <button
        aria-disabled={true}
        className="emotion-38"
        onClick={[Function]}
        type="submit"
      >
        Create New Model
      </button>
    </div>
  </form>,
]
`;

exports[`<ModelsAdd /> should render properly 2`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  color: #ffffff;
  background-color: #d6680b;
  border-radius: 32px;
  font-size: 11px;
  line-height: 15px;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 0.2px;
  padding: 1px;
  padding-left: 6px;
  padding-right: 6px;
  margin-left: 8px;
}

<h2
    className="emotion-0"
  >
    Custom Models
    <span
      className="emotion-1"
    >
      beta
    </span>
  </h2>,
  .emotion-0 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-2 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-3 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3A5DFF;
}

.emotion-5 {
  border: 0 #3A5DFF solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/models"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View all
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-5"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/models/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Create New Model
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-1 {
  font-size: 21px;
  line-height: 30px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-2 {
  padding-top: 8px;
}

.emotion-3 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-4 {
  position: relative;
}

.emotion-5 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-5:focus,
.emotion-5 .noop {
  border: 2px solid #3A5DFF;
  outline: #3A5DFF;
  color: #000000;
  background-color: #ffffff;
}

.emotion-5:hover,
.emotion-5 .noop {
  border: 2px solid #ffffff;
}

.emotion-6 {
  padding-top: 8px;
}

.emotion-7 {
  padding-top: 8px;
}

.emotion-8 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-9 {
  position: relative;
}

.emotion-10 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-10:focus,
.emotion-10 .noop {
  border: 2px solid #3A5DFF;
  background-color: #ffffff;
  outline: #3A5DFF;
  color: #000000;
}

.emotion-13 {
  padding-top: 16px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-16 {
  padding: 0;
  -webkit-appearance: none;
  border-radius: 16px;
  width: 16px;
  height: 16px;
  border: 1px solid #ffffff;
}

.emotion-17 {
  position: absolute;
  width: 8px;
  height: 8px;
  opacity: 100;
  border-radius: 16px;
  background-color: #3A5DFF;
}

.emotion-18 {
  padding-left: 12px;
}

.emotion-19 {
  font-weight: 700;
  color: #ffffff;
}

.emotion-20 {
  color: #b3b3b3;
}

.emotion-24 {
  padding: 0;
  -webkit-appearance: none;
  border-radius: 16px;
  width: 16px;
  height: 16px;
  border: 1px solid #808080;
}

.emotion-25 {
  position: absolute;
  width: 8px;
  height: 8px;
  opacity: 100;
  border-radius: 16px;
  background-color: none;
}

.emotion-37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-37 button,
.emotion-37 a {
  margin-right: 16px;
}

.emotion-37 button:last-child,
.emotion-37 a:last-child {
  margin-right: 0;
}

.emotion-38 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-38,
.emotion-38:hover,
.emotion-38:visited,
.emotion-38 .noop {
  background-color: #3A5DFF;
}

.emotion-38:hover,
.emotion-38 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-38[aria-disabled=true],
.emotion-38 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
    action=""
    className="emotion-0"
    method="post"
    onSubmit={[Function]}
  >
    <h3
      className="emotion-1"
    >
      Model Name & Description
    </h3>
    <div
      className="emotion-2"
    >
      <label
        className="emotion-3"
        htmlFor="name"
      >
        Model Name (no spaces - lowercase, numbers, and dashes only):
      </label>
      <div
        className="emotion-4"
      >
        <input
          autoComplete="off"
          autoFocus={true}
          className="emotion-5"
          disabled={false}
          id="name"
          name="name"
          onChange={[Function]}
          type="text"
          value="my-new-model-really"
        />
      </div>
      <div
        className="emotion-6"
      >
         
      </div>
    </div>
    <div
      className="emotion-7"
    >
      <label
        className="emotion-8"
        htmlFor="description"
      >
        Description (optional):
      </label>
      <div
        className="emotion-9"
      >
        <textarea
          className="emotion-10"
          id="description"
          name="description"
          onChange={[Function]}
          rows="5"
          value="A cool new description"
        />
      </div>
      <div
        className="emotion-7"
      >
         
      </div>
    </div>
    <h3
      className="emotion-1"
    >
      Select Model Type
    </h3>
    <div
      className="emotion-13"
    >
      <div>
        <label
          className="emotion-14"
        >
          <div
            className="emotion-15"
          >
            <input
              className="emotion-16"
              defaultChecked={true}
              name="modelType"
              onClick={[Function]}
              type="radio"
              value="KNN_CLASSIFIER"
            />
            <div
              className="emotion-17"
            />
          </div>
          <div
            className="emotion-18"
          >
            <div
              className="emotion-19"
            >
              K-Nearest Neighbors Classifier
            </div>
            <div
              className="emotion-20"
            >
              Classify images, documents and video clips using a KNN classifier.  This type of model can work great with just a single labeled example.If no labels are provided, the model automatically generates numbered groups of similar assets. These groups can be renamed and edited in subsequent training passes.
            </div>
          </div>
        </label>
      </div>
    </div>
    <div
      className="emotion-13"
    >
      <div>
        <label
          className="emotion-14"
        >
          <div
            className="emotion-15"
          >
            <input
              className="emotion-24"
              defaultChecked={false}
              name="modelType"
              onClick={[Function]}
              type="radio"
              value="TF_CLASSIFIER"
            />
            <div
              className="emotion-25"
            />
          </div>
          <div
            className="emotion-18"
          >
            <div
              className="emotion-19"
            >
              Tensorflow Transfer Learning Classifier
            </div>
            <div
              className="emotion-20"
            >
              Classify images or documents using a custom strained CNN deep learning algorithm.  This type of modelgenerates multiple predictions and can be trained to identify very specific features. The label detection classifier requires at least 2 concepts with 10 labeled images each.
            </div>
          </div>
        </label>
      </div>
    </div>
    <div
      className="emotion-13"
    >
      <div>
        <label
          className="emotion-14"
        >
          <div
            className="emotion-15"
          >
            <input
              className="emotion-24"
              defaultChecked={false}
              name="modelType"
              onClick={[Function]}
              type="radio"
              value="FACE_RECOGNITION"
            />
            <div
              className="emotion-25"
            />
          </div>
          <div
            className="emotion-18"
          >
            <div
              className="emotion-19"
            >
              Face Recognition
            </div>
            <div
              className="emotion-20"
            >
              Label faces detected by the boonai-face-detection module, and classify them with a KNN model.
            </div>
          </div>
        </label>
      </div>
    </div>
    <div
      className="emotion-37"
    >
      <button
        className="emotion-38"
        onClick={[Function]}
        type="submit"
      >
        Create New Model
      </button>
    </div>
  </form>,
]
`;
